--- a/app/src/main/res/layout/add_edit_counter_fragment.xml
+++ b/app/src/main/res/layout/add_edit_counter_fragment.xml
@@ -38,10 +38,34 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/note_layout"
+        android:id="@+id/step_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/limit_layout">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/step_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/step"
+            android:inputType="number"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <AutoCompleteTextView
+        android:id="@+id/group_auto_complete_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:hint="@string/select_group"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/step_layout"/>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/note_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/group_auto_complete_text_view">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/note_text_input"
@@ -51,63 +75,6 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:id="@+id/select_group_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:gravity="center_vertical"
-        android:labelFor="@id/group_auto_complete_text_view"
-        android:paddingEnd="4dp"
-        android:paddingStart="4dp"
-        android:text="@string/select_group"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/note_layout"/>
-
-    <AutoCompleteTextView
-        android:id="@+id/group_auto_complete_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/touch_or_leave_empty"
-        app:layout_constraintStart_toEndOf="@id/select_group_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/note_layout"/>
-
-    <TextView
-        android:id="@+id/direction_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:gravity="center_vertical"
-        android:paddingEnd="4dp"
-        android:paddingStart="4dp"
-        android:text="@string/direction"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/select_group_text_view"/>
-
-    <ImageButton
-        android:id="@+id/decrease_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:contentDescription="@string/ascending"
-        android:background="@android:color/transparent"
-        android:paddingEnd="5dp"
-        android:paddingStart="5dp"
-        app:layout_constraintBottom_toBottomOf="@id/direction_text_view"
-        app:layout_constraintStart_toEndOf="@id/direction_text_view"
-        app:srcCompat="@drawable/down_arrow"/>
-
-    <ImageButton
-        android:id="@+id/increase_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:contentDescription="@string/descending"
-        android:background="@android:color/transparent"
-        android:paddingEnd="5dp"
-        android:paddingStart="5dp"
-        app:layout_constraintBottom_toBottomOf="@id/direction_text_view"
-        app:layout_constraintStart_toEndOf="@id/decrease_image_view"
-        app:srcCompat="@drawable/up_arrow"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -121,6 +88,6 @@
         android:paddingStart="@dimen/material_button_horizontal_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/direction_text_view"/>
+        app:layout_constraintTop_toBottomOf="@id/note_layout"/>
 
 </android.support.constraint.ConstraintLayout>
