--- a/app/src/main/res/layout/add_edit_counter_fragment.xml
+++ b/app/src/main/res/layout/add_edit_counter_fragment.xml
@@ -52,20 +52,19 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <AutoCompleteTextView
-        android:id="@+id/group_auto_complete_text_view"
+    <Spinner
+        android:id="@+id/group_spinner"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:hint="@string/select_group"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/step_layout"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/note_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/group_auto_complete_text_view">
+        app:layout_constraintTop_toBottomOf="@id/group_spinner">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/note_text_input"
