--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_edit"
-        android:icon="@drawable/ic_three_dots"
+        android:icon="@drawable/ic_plus"
         android:title="@string/edit"
         app:showAsAction="always"/>
 </menu>
