--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_edit"
+        android:id="@+id/action_add"
         android:icon="@drawable/ic_plus"
-        android:title="@string/edit"
+        android:title="@string/add"
         app:showAsAction="always"/>
 </menu>
