--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="material_button_min_width">64dp</dimen>
     <dimen name="material_button_height">36dp</dimen>
     <dimen name="material_button_horizontal_padding">16dp</dimen>
+    <dimen name="recycler_view_item_offset">5dp</dimen>
 </resources>
