--- a/app/src/main/res/layout/statistics_item.xml
+++ b/app/src/main/res/layout/statistics_item.xml
@@ -17,7 +17,18 @@
         android:text="01.01.2000"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.5"
+        app:layout_constraintWidth_percent="0.34"
+        tools:ignore="HardcodedText"/>
+
+    <TextView
+        android:id="@+id/type_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="01.01.2000"
+        app:layout_constraintLeft_toRightOf="@id/date_text_view"
+        app:layout_constraintRight_toLeftOf="@id/value_text_view"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.33"
         tools:ignore="HardcodedText"/>
 
     <TextView
@@ -25,10 +36,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="15"
-        app:layout_constraintLeft_toRightOf="@id/date_text_view"
+        app:layout_constraintLeft_toRightOf="@id/type_text_view"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.5"
+        app:layout_constraintWidth_percent="0.33"
         tools:ignore="HardcodedText"/>
 
 </android.support.constraint.ConstraintLayout>
