--- a/app/src/main/res/layout/folder_item.xml
+++ b/app/src/main/res/layout/folder_item.xml
@@ -25,11 +25,23 @@
         android:id="@+id/name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rappel 1 (10)"
+        android:text="Folder #1"
         android:textSize="20sp"
         android:layout_marginStart="10dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/folder_image_view"
+        tools:ignore="HardcodedText"/>
+
+    <TextView
+        android:id="@+id/count_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="5 counters"
+        android:textSize="20sp"
+        android:textColor="@color/light_grey"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@id/folder_image_view"
+        app:layout_constraintTop_toBottomOf="@id/name_text_view"
         tools:ignore="HardcodedText"/>
 
     <ImageView
