--- a/app/src/main/res/layout/statistics_list_header.xml
+++ b/app/src/main/res/layout/statistics_list_header.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,23 +7,25 @@
     android:paddingBottom="@dimen/list_item_vertical_margin"
     android:paddingLeft="@dimen/list_item_horizontal_margin"
     android:paddingRight="@dimen/list_item_horizontal_margin"
-    android:paddingTop="@dimen/list_item_vertical_margin">
+    android:paddingTop="@dimen/list_item_vertical_margin"
+    android:background="@color/darkseagreen">
 
     <TextView
         android:id="@+id/date_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="01.01.2000"
+        android:text="@string/date"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.4"
-        tools:ignore="HardcodedText"/>
+        app:layout_constraintWidth_percent="0.4"/>
 
     <TextView
         android:id="@+id/type_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="01.01.2000"
+        android:text="@string/type"
+        android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/date_text_view"
         app:layout_constraintRight_toLeftOf="@id/value_text_view"
         app:layout_constraintWidth_default="percent"
@@ -35,7 +36,8 @@
         android:id="@+id/value_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="15"
+        android:text="@string/amount"
+        android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/type_text_view"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintWidth_default="percent"
