--- a/app/src/main/res/layout/counter_fragment.xml
+++ b/app/src/main/res/layout/counter_fragment.xml
@@ -46,6 +46,7 @@
             style="?android:progressBarStyleHorizontal"
             android:layout_width="250dp"
             android:layout_height="250dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/progress_bar_background"
             android:progress="50"
             android:progressDrawable="@drawable/progress_bar_circle"
@@ -72,29 +73,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="-1"
-            app:layout_constraintLeft_toLeftOf="@id/counter_progress_bar"
-            app:layout_constraintTop_toBottomOf="@id/counter_progress_bar"
-            tools:ignore="HardcodedText"/>
-
-        <Button
-            android:id="@+id/counter_increase_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/holo_green_light"
-            android:text="+1"
-            app:layout_constraintRight_toRightOf="@id/counter_progress_bar"
-            app:layout_constraintTop_toBottomOf="@id/counter_progress_bar"
-            tools:ignore="HardcodedText"/>
-
-        <Button
-            android:id="@+id/counter_reset_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/holo_red_light"
-            android:text="@string/reset"
+            android:layout_marginTop="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/counter_progress_bar"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/counter_increase_button"
             tools:ignore="HardcodedText"/>
 
     </android.support.constraint.ConstraintLayout>
