--- a/app/src/main/res/layout/counter_item.xml
+++ b/app/src/main/res/layout/counter_item.xml
@@ -39,7 +39,7 @@
         android:id="@+id/infinite_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_infinity"
+        android:src="@drawable/ic_infinity_24dp"
         app:layout_constraintBottom_toBottomOf="@id/counter_item_progress_bar"
         app:layout_constraintEnd_toEndOf="@id/counter_item_progress_bar"
         app:layout_constraintStart_toStartOf="@id/counter_item_progress_bar"
@@ -100,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/edit"
-        android:src="@drawable/ic_three_dots"
+        android:src="@drawable/ic_more_vert_24px"
         android:tint="@color/lightgrey"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
