--- a/app/src/main/res/layout/counter_list_fragment.xml
+++ b/app/src/main/res/layout/counter_list_fragment.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:drawableTop="@drawable/ic_counter"
+        android:drawableTop="@drawable/ic_assignment_late_24px"
         android:text="@string/no_counters"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
