--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -38,124 +38,26 @@
         <item>@color/deep_pink</item>
     </integer-array>
 
-    <integer-array name="android_colors">
-        <item>@color/wild_strawberry</item>
-        <item>@color/san_marino</item>
-        <item>@color/sapphire</item>
-        <item>@color/havelock_blue</item>
-        <item>@color/havelock_blue_dark</item>
-        <item>@color/gold</item>
-        <item>@color/pink</item>
-        <item>@color/lightpink</item>
-        <item>@color/orange</item>
-        <item>@color/lightsalmon</item>
-        <item>@color/darkorange</item>
-        <item>@color/coral</item>
-        <item>@color/hotpink</item>
-        <item>@color/tomato</item>
-        <item>@color/orange_red</item>
-        <item>@color/deep_pink</item>
-        <item>@color/fuchsia</item>
-        <item>@color/magenta</item>
-        <item>@color/red</item>
-        <item>@color/salmon</item>
-        <item>@color/sandy_brown</item>
-        <item>@color/light_coral</item>
-        <item>@color/violet</item>
-        <item>@color/dark_salmon</item>
-        <item>@color/burlywood</item>
-        <item>@color/plum</item>
-        <item>@color/crimson</item>
-        <item>@color/palevioletred</item>
-        <item>@color/goldenrod</item>
-        <item>@color/orchid</item>
-        <item>@color/chocolate</item>
-        <item>@color/peru</item>
-        <item>@color/indianred</item>
-        <item>@color/mediumvioletred</item>
-        <item>@color/darkkhaki</item>
-        <item>@color/rosybrown</item>
-        <item>@color/mediumorchid</item>
-        <item>@color/darkgoldenrod</item>
-        <item>@color/firebrick</item>
-        <item>@color/powderblue</item>
-        <item>@color/lightsteelblue</item>
-        <item>@color/paleturquoise</item>
-        <item>@color/greenyellow</item>
-        <item>@color/lightblue</item>
-        <item>@color/darkgray</item>
-        <item>@color/brown</item>
-        <item>@color/sienna</item>
-        <item>@color/yellowgreen</item>
-        <item>@color/darkorchid</item>
-        <item>@color/palegreen</item>
-        <item>@color/darkviolet</item>
-        <item>@color/mediumpurple</item>
-        <item>@color/lightgreen</item>
-        <item>@color/darkseagreen</item>
-        <item>@color/saddlebrown</item>
-        <item>@color/darkmagenta</item>
-        <item>@color/darkred</item>
-        <item>@color/blueviolet</item>
-        <item>@color/lightskyblue</item>
-        <item>@color/skyblue</item>
-        <item>@color/gray</item>
-        <item>@color/olive</item>
-        <item>@color/purple</item>
-        <item>@color/maroon</item>
-        <item>@color/aquamarine</item>
-        <item>@color/chartreuse</item>
-        <item>@color/lawngreen</item>
-        <item>@color/mediumslateblue</item>
-        <item>@color/lightslategray</item>
-        <item>@color/slategray</item>
-        <item>@color/olivedrab</item>
-        <item>@color/slateblue</item>
-        <item>@color/dimgray</item>
-        <item>@color/mediumaquamarine</item>
-        <item>@color/cornflowerblue</item>
-        <item>@color/cadetblue</item>
-        <item>@color/darkolivegreen</item>
-        <item>@color/indigo</item>
-        <item>@color/mediumturquoise</item>
-        <item>@color/darkslateblue</item>
-        <item>@color/steelblue</item>
-        <item>@color/royalblue</item>
-        <item>@color/turquoise</item>
-        <item>@color/mediumseagreen</item>
-        <item>@color/limegreen</item>
-        <item>@color/darkslategray</item>
-        <item>@color/seagreen</item>
-        <item>@color/forestgreen</item>
-        <item>@color/lightseagreen</item>
-        <item>@color/dodgerblue</item>
-        <item>@color/midnightblue</item>
-        <item>@color/aqua</item>
-        <item>@color/cyan</item>
-        <item>@color/springgreen</item>
-        <item>@color/lime</item>
-        <item>@color/mediumspringgreen</item>
-        <item>@color/darkturquoise</item>
-        <item>@color/deepskyblue</item>
-        <item>@color/darkcyan</item>
-        <item>@color/teal</item>
-        <item>@color/green</item>
-        <item>@color/darkgreen</item>
-        <item>@color/blue</item>
-        <item>@color/mediumblue</item>
-        <item>@color/darkblue</item>
-        <item>@color/navy</item>
-        <item>@color/black</item>
-        <item>@color/light_green</item>
-        <item>@color/deep_purple</item>
-        <item>@color/dark_grey</item>
-        <item>@color/deep_green</item>
-        <item>@color/deep_blue</item>
-        <item>@color/light_red</item>
-        <item>@color/deep_orange</item>
-        <item>@color/deep_red</item>
-        <item>@color/deep_silver</item>
-        <item>@color/light_blue</item>
-        <item>@color/app_color_sky_blue</item>
-    </integer-array>
+    <string-array name="android_colors">
+        <item>#d50000</item>
+        <item>#c51162</item>
+        <item>#aa00ff</item>
+        <item>#6200ea</item>
+        <item>#0000ff</item>
+        <item>#304ffe</item>
+        <item>#2962ff</item>
+        <item>#0091ea</item>
+        <item>#00b8d4</item>
+        <item>#00bfa5</item>
+        <item>#008000</item>
+        <item>#00c853</item>
+        <item>#64dd17</item>
+        <item>#aeea00</item>
+        <item>#ffd600</item>
+        <item>#ffab00</item>
+        <item>#ff6d00</item>
+        <item>#dd2c00</item>
+        <item>#ff0000</item>
+        <item>#3e2723</item>
+    </string-array>
 </resources>
