--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/san_marino</color>
-    <color name="colorPrimaryDark">@color/sapphire</color>
-    <color name="colorAccent">@color/wild_strawberry</color>
+    <color name="colorPrimary">@color/teal</color>
+    <color name="colorPrimaryDark">@color/darkteal</color>
+    <color name="colorAccent">@color/cyan</color>
 
     <!-- General colors -->
     <color name="wild_strawberry">#FF4081</color>
@@ -135,14 +135,15 @@
     <color name="dodgerblue">#1e90ff</color>
     <color name="midnightblue">#191970</color>
     <color name="aqua">#00ffff</color>
-    <color name="cyan">#00ffff</color>
+    <color name="cyan">#00bcd4</color>
     <color name="springgreen">#00ff7f</color>
     <color name="lime">#00ff00</color>
     <color name="mediumspringgreen">#00fa9a</color>
     <color name="darkturquoise">#00ced1</color>
     <color name="deepskyblue">#00bfff</color>
     <color name="darkcyan">#008b8b</color>
-    <color name="teal">#008080</color>
+    <color name="teal">#009688</color>
+    <color name="darkteal">#00796b</color>
     <color name="green">#008000</color>
     <color name="darkgreen">#006400</color>
     <color name="blue">#0000ff</color>
