--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/teal</item>
+        <item name="colorPrimaryDark">@color/darkteal</item>
+        <item name="colorAccent">@color/cyan</item>
         <item name="android:fontFamily">@font/fallingsky</item>
         <item name="fontFamily">@font/fallingsky</item> <!-- target android sdk versions < 26 and > 14 if theme other than AppCompat -->
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
